add dynamic dodge

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "mainChamp": "yuumi",
-    "remakeOnBan": true,
+    "dynamicDodge": true,
     "remakeChamp": "singed",
     "banChamp": "nautilus",
     "gameMode": "soloduo",
