update default ban champ

--- a/bot/config.json
+++ b/bot/config.json
@@ -2,7 +2,7 @@
     "mainChamp": "yuumi",
     "remakeOnBan": true,
     "remakeChamp": "singed",
-    "banChamp": "yuumi",
+    "banChamp": "nautilus",
     "gameMode": "soloduo",
     "instantMessage": "I mute all ingame. GL HF!"
 }
